--- a/app/src/main/res/layout/activity_registro_usuarios.xml
+++ b/app/src/main/res/layout/activity_registro_usuarios.xml
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp">
             <EditText
-                android:id="@+id/editTextTextPersonName3"
+                android:id="@+id/txtPlaca"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp">
             <EditText
-                android:id="@+id/editTextTextPersonName2"
+                android:id="@+id/txtPropietario"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
