--- a/app/src/main/res/layout/activity_registro_salida.xml
+++ b/app/src/main/res/layout/activity_registro_salida.xml
@@ -41,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <EditText
-                android:id="@+id/editTextTextPersonName"
+                android:id="@+id/txtNombre"
                 android:layout_width="369dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
