--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -6,41 +6,42 @@
     android:layout_height="match_parent"
     tools:context=".Menu">
 
-1
+    1
+
     <Button
         android:id="@+id/btnRegistroEntrada"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="76dp"
         android:layout_marginEnd="20dp"
         android:backgroundTint="#FE2E2E"
         android:text="Registro Entrada de vehiculos"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnRegistroSalida" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <Button
         android:id="@+id/btnRegistroSalida"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="46dp"
         android:layout_marginEnd="20dp"
         android:backgroundTint="#04B404"
         android:text="Registro Salida de vehiculos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/btnRegistroEntrada" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="196dp"
-        android:layout_height="202dp"
+        android:layout_width="121dp"
+        android:layout_height="103dp"
         android:layout_marginStart="107dp"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="108dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,99 +49,49 @@
         app:srcCompat="@drawable/logo_parkingg" />
 
     <TextView
-        android:id="@+id/Bloque1"
+        android:id="@+id/txtPlazas1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="80dp"
-        android:text="Bloque 1"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="161dp"
+        android:hint="# Plazas"
+        android:text="Info"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnRegistroEntrada" />
+        app:layout_constraintTop_toBottomOf="@+id/txtIdBloque1" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/txtIdBloque1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="52dp"
-        android:text="Bloque 2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnRegistroEntrada" />
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="157dp"
+        android:hint="Bloque"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnRegistroSalida" />
 
     <TextView
-        android:id="@+id/txtIdPlazas"
+        android:id="@+id/txtIdBloque2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="309dp"
-        android:text="sexo"
+        android:layout_marginTop="156dp"
+        android:layout_marginEnd="80dp"
+        android:hint="Bloque"
+        app:layout_constraintBottom_toTopOf="@+id/txtPlazasB2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.016"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Bloque1" />
+        app:layout_constraintTop_toBottomOf="@+id/btnRegistroSalida" />
 
     <TextView
         android:id="@+id/txtPlazasB2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="194dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="52dp"
-        android:text="texto"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="161dp"
+        android:hint="# Plazas"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txtIdPlazas"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <TextView
-        android:id="@+id/txtNumPlazas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="199dp"
-        android:text="sexo"
-        app:layout_constraintEnd_toStartOf="@+id/textView7"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtIdPlazas" />
-
-    <TextView
-        android:id="@+id/txtRegistro"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="204dp"
-        android:layout_marginBottom="74dp"
-        android:text="sexo"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView8"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNumPlazas"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="199dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
-        app:layout_constraintStart_toEndOf="@+id/txtNumPlazas"
-        app:layout_constraintTop_toBottomOf="@+id/txtPlazasB2" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="204dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="79dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txtRegistro"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/txtIdBloque2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
