--- a/app/src/main/res/layout/activity_registro_usuarios.xml
+++ b/app/src/main/res/layout/activity_registro_usuarios.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegistroUsuarios">
+    tools:context=".RegistroEntrada">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <EditText
-            android:id="@+id/txtNombre"
+            android:id="@+id/txtIdRegistroSalida1"
             android:layout_width="369dp"
             android:layout_height="50dp"
             android:layout_marginStart="20dp"
@@ -143,7 +143,7 @@
         android:layout_height="34dp" />
 
     <Button
-        android:id="@+id/btnSalidaVehiculo"
+        android:id="@+id/btnGuardarSalida"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
