--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -53,11 +53,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="161dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="16dp"
         android:hint="# Plazas"
         android:text="Info"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/listaBloques"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtIdBloque1" />
 
@@ -66,7 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="157dp"
+        android:layout_marginTop="10dp"
         android:hint="Bloque"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnRegistroSalida" />
@@ -75,8 +75,9 @@
         android:id="@+id/txtIdBloque2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="156dp"
-        android:layout_marginEnd="80dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginBottom="5dp"
         android:hint="Bloque"
         app:layout_constraintBottom_toTopOf="@+id/txtPlazasB2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,12 +87,24 @@
         android:id="@+id/txtPlazasB2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="80dp"
-        android:layout_marginBottom="161dp"
+        android:layout_marginBottom="16dp"
         android:hint="# Plazas"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/listaBloques"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtIdBloque2" />
+
+    <ListView
+        android:id="@+id/listaBloques"
+        android:layout_width="404dp"
+        android:layout_height="293dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnRegistroSalida"
+        app:layout_constraintVertical_bias="0.961" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
