--- a/app/src/main/res/layout/activity_registro_usuarios.xml
+++ b/app/src/main/res/layout/activity_registro_usuarios.xml
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <EditText
-            android:id="@+id/txtIdRegistroSalida1"
+            android:id="@+id/txtBuscarPlaca"
             android:layout_width="369dp"
             android:layout_height="50dp"
             android:layout_marginStart="20dp"
